// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. comment lead and cartoon - medium 1`] = `
<div>
  <div>
    <div>
      <TileAH
        breakpoint="wide"
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileAI
        breakpoint="wide"
        tileName="cartoon"
      />
    </div>
  </div>
</div>
`;

exports[`2. daily universal register - medium 1`] = `
<div>
  <div>
    <Image
      aspectRatio={1}
      uri="https://www.thetimes.co.uk/d/img/DUR-masthead-40fe00731f.png"
    />
    <div>
      Daily Universal Register
    </div>
    <div>
      <div>
        <TileS
          breakpoint="wide"
        />
        <div />
        <TileS
          breakpoint="wide"
          logo={
            <Logo
              imageUri="https://www.thetimes.co.uk/d/img/DUR-nature-80d36dd1cd.png"
              ratio={1}
              type="nature notes"
            />
          }
        />
      </div>
      <div />
      <div>
        <TileS
          breakpoint="wide"
        />
        <div />
        <TileS
          breakpoint="wide"
          logo={
            <Logo
              imageUri="https://www.thetimes.co.uk/d/img/DUR-birthdays-94b2272911.png"
              ratio={1}
              type="birthdays"
            />
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`3. lead one and one - medium 1`] = `
<div>
  <div>
    <div>
      <TileZ
        breakpoint="wide"
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileAF
        breakpoint="wide"
        tileName="support"
      />
    </div>
  </div>
</div>
`;

exports[`4. lead one full width - medium 1`] = `
<div>
  <TileR
    breakpoint="wide"
    tileName="lead"
  />
</div>
`;

exports[`5. lead two no pic and two - medium 1`] = `
<div>
  <div>
    <div>
      <TileX
        breakpoint="wide"
        tileName="lead1"
      />
      <div />
      <TileY
        breakpoint="wide"
        tileName="lead2"
      />
    </div>
    <div />
    <div>
      <TileE
        breakpoint="wide"
        tileName="support1"
      />
    </div>
    <div />
    <div>
      <TileAL
        breakpoint="wide"
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`6. leaders slice - medium 1`] = `
<div>
  <div>
    <div>
      <Image
        aspectRatio={5.74}
        uri="https://www.thetimes.co.uk/d/img/leaders-masthead-d17db00289.png"
      />
      <div>
        <div>
           Leading Articles 
        </div>
      </div>
    </div>
    <div>
      <div>
        <TileM
          breakpoint="wide"
          tileName="leader2"
        />
      </div>
      <div />
      <div>
        <TileM
          breakpoint="wide"
          tileName="leader1"
        />
      </div>
      <div />
      <div>
        <TileM
          breakpoint="wide"
          tileName="leader3"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`7. secondary one and four - medium 1`] = `
<div>
  <div>
    <div>
      <TheTimesLogo
        height={40}
        width={42}
      />
    </div>
    <div />
    <div>
      <div>
        <div>
          <TileN
            breakpoint="wide"
            tileName="secondary"
          />
        </div>
      </div>
      <div />
      <div>
        <div>
          <div>
            <TileO
              breakpoint="wide"
              tileName="support1"
            />
          </div>
          <div />
          <div>
            <TileO
              breakpoint="wide"
              tileName="support2"
            />
          </div>
        </div>
        <div />
        <div>
          <div>
            <TileO
              breakpoint="wide"
              tileName="support3"
            />
          </div>
          <div />
          <div>
            <TileO
              breakpoint="wide"
              tileName="support4"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`8. secondary one - medium 1`] = `
<div>
  <TileW
    breakpoint="wide"
    tileName="secondary"
  />
</div>
`;

exports[`9. secondary four - medium 1`] = `
<div>
  <div>
    <div>
      <div>
        <TileAR
          breakpoint="wide"
          tileName="secondary1"
        />
      </div>
      <div />
      <div>
        <TileAR
          breakpoint="wide"
          tileName="secondary2"
        />
      </div>
    </div>
    <div />
    <div>
      <TileB
        additionalHeadlineStyles={
          Object {
            "fontSize": 20,
            "lineHeight": 20,
            "marginBottom": "5px",
          }
        }
        breakpoint="wide"
        tileName="secondary3"
      />
      <div />
      <TileB
        additionalHeadlineStyles={
          Object {
            "fontSize": 20,
            "lineHeight": 20,
            "marginBottom": "5px",
          }
        }
        breakpoint="wide"
        tileName="secondary4"
      />
    </div>
  </div>
</div>
`;

exports[`10. secondary one and columnist - medium 1`] = `
<div>
  <div>
    <div>
      <TileAB
        breakpoint="wide"
        tileName="columnist"
      />
    </div>
    <div />
    <div>
      <TileB
        breakpoint="wide"
        tileName="secondary"
        withMoreTeaser={true}
      />
    </div>
  </div>
</div>
`;

exports[`11. secondary two and two - medium 1`] = `
<div>
  <div>
    <div>
      <TileAM
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileAN
        tileName="support1"
      />
    </div>
    <div />
    <div>
      <TileAM
        tileName="secondary2"
      />
    </div>
    <div />
    <div>
      <TileAN
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`12. lead one and four slice - medium 1`] = `
<div>
  <div>
    <div>
      <TileAC
        breakpoint="wide"
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileAD
        breakpoint="wide"
        tileName="support1"
      />
      <div />
      <TileAD
        breakpoint="wide"
        tileName="support2"
      />
      <div />
      <TileAD
        breakpoint="wide"
        tileName="support3"
      />
      <div />
      <TileAD
        breakpoint="wide"
        tileName="support4"
      />
    </div>
  </div>
</div>
`;

exports[`13. standard slice - medium 1`] = `
<div>
  <div>
    <div>
      <TileK
        breakpoint="wide"
        tileName="standardItem1"
      />
      <div />
      <TileK
        breakpoint="wide"
        tileName="standardItem2"
      />
      <div />
      <TileK
        breakpoint="wide"
        tileName="standardItem3"
      />
      <div />
      <TileK
        breakpoint="wide"
        tileName="standardItem4"
      />
      <div />
      <TileK
        breakpoint="wide"
        tileName="standardItem5"
      />
    </div>
  </div>
</div>
`;

exports[`14. secondary two no pic and two - medium 1`] = `
<div>
  <div>
    <div>
      <div>
        <TileAE
          breakpoint="wide"
          tileName="secondary1"
        />
      </div>
      <div />
      <div>
        <TileAE
          breakpoint="wide"
          tileName="secondary2"
        />
      </div>
    </div>
    <div />
    <div>
      <TileG
        breakpoint="wide"
        tileName="support1"
      />
      <div />
      <TileG
        breakpoint="wide"
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`15. list two and six no pic - medium 1`] = `
<div>
  <div>
    <div>
      <TileAS
        breakpoint="wide"
        tileName="lead1"
      />
    </div>
    <div />
    <div>
      <TileAS
        breakpoint="wide"
        tileName="lead2"
      />
    </div>
    <div />
    <div>
      <div>
        <div>
          <TileL
            breakpoint="wide"
            tileName="support1"
          />
        </div>
        <div />
        <div>
          <TileL
            breakpoint="wide"
            tileName="support2"
          />
        </div>
      </div>
      <div />
      <div>
        <div>
          <TileL
            breakpoint="wide"
            tileName="support3"
          />
        </div>
        <div />
        <div>
          <TileL
            breakpoint="wide"
            tileName="support4"
          />
        </div>
      </div>
      <div />
      <div>
        <div>
          <TileL
            breakpoint="wide"
            tileName="support5"
          />
        </div>
        <div />
        <div>
          <TileL
            breakpoint="wide"
            tileName="support6"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`16. puzzle - medium 1`] = `
<div>
  <div>
    <div>
      <TileAK
        breakpoint="wide"
        id="0"
        image={
          Object {
            "crop11": null,
            "crop169": null,
            "crop23": null,
            "crop32": Object {
              "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
            },
            "crop45": null,
            "crops": Array [],
            "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
          }
        }
        title="Times Concise medium No 7881"
        url="/crossword/123"
      />
    </div>
    <div>
      <TileAK
        breakpoint="wide"
        id="1"
        image={
          Object {
            "crop11": null,
            "crop169": null,
            "crop23": null,
            "crop32": Object {
              "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
            },
            "crop45": null,
            "crops": Array [],
            "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
          }
        }
        title="Times Concise medium No 7881"
        url="/crossword/123"
      />
    </div>
    <div>
      <TileAK
        breakpoint="wide"
        id="2"
        image={
          Object {
            "crop11": null,
            "crop169": null,
            "crop23": null,
            "crop32": Object {
              "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
            },
            "crop45": null,
            "crops": Array [],
            "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
          }
        }
        title="Times Concise medium No 7881"
        url="/crossword/123"
      />
    </div>
  </div>
</div>
`;

exports[`17. comment lead and cartoon - wide 1`] = `
<div>
  <div>
    <div>
      <TileAH
        breakpoint="wide"
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileAI
        breakpoint="wide"
        tileName="cartoon"
      />
    </div>
  </div>
</div>
`;

exports[`18. daily universal register - wide 1`] = `
<div>
  <div>
    <Image
      aspectRatio={1}
      uri="https://www.thetimes.co.uk/d/img/DUR-masthead-40fe00731f.png"
    />
    <div>
      Daily Universal Register
    </div>
    <div>
      <div>
        <TileS
          breakpoint="wide"
        />
        <div />
        <TileS
          breakpoint="wide"
          logo={
            <Logo
              imageUri="https://www.thetimes.co.uk/d/img/DUR-nature-80d36dd1cd.png"
              ratio={1}
              type="nature notes"
            />
          }
        />
      </div>
      <div />
      <div>
        <TileS
          breakpoint="wide"
        />
        <div />
        <TileS
          breakpoint="wide"
          logo={
            <Logo
              imageUri="https://www.thetimes.co.uk/d/img/DUR-birthdays-94b2272911.png"
              ratio={1}
              type="birthdays"
            />
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`19. lead one and one - wide 1`] = `
<div>
  <div>
    <div>
      <TileZ
        breakpoint="wide"
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileAF
        breakpoint="wide"
        tileName="support"
      />
    </div>
  </div>
</div>
`;

exports[`20. lead one full width - wide 1`] = `
<div>
  <TileR
    breakpoint="wide"
    tileName="lead"
  />
</div>
`;

exports[`21. lead two no pic and two - wide 1`] = `
<div>
  <div>
    <div>
      <TileX
        breakpoint="wide"
        tileName="lead1"
      />
      <div />
      <TileY
        breakpoint="wide"
        tileName="lead2"
      />
    </div>
    <div />
    <div>
      <TileE
        breakpoint="wide"
        tileName="support1"
      />
    </div>
    <div />
    <div>
      <TileAL
        breakpoint="wide"
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`22. leaders slice - wide 1`] = `
<div>
  <div>
    <div>
      <Image
        aspectRatio={5.74}
        uri="https://www.thetimes.co.uk/d/img/leaders-masthead-d17db00289.png"
      />
      <div>
        <div>
           Leading Articles 
        </div>
      </div>
    </div>
    <div>
      <div>
        <TileM
          breakpoint="wide"
          tileName="leader2"
        />
      </div>
      <div />
      <div>
        <TileM
          breakpoint="wide"
          tileName="leader1"
        />
      </div>
      <div />
      <div>
        <TileM
          breakpoint="wide"
          tileName="leader3"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`23. secondary one and four - wide 1`] = `
<div>
  <div>
    <div>
      <TheTimesLogo
        height={40}
        width={42}
      />
    </div>
    <div />
    <div>
      <div>
        <div>
          <TileN
            breakpoint="wide"
            tileName="secondary"
          />
        </div>
      </div>
      <div />
      <div>
        <div>
          <div>
            <TileO
              breakpoint="wide"
              tileName="support1"
            />
          </div>
          <div />
          <div>
            <TileO
              breakpoint="wide"
              tileName="support2"
            />
          </div>
        </div>
        <div />
        <div>
          <div>
            <TileO
              breakpoint="wide"
              tileName="support3"
            />
          </div>
          <div />
          <div>
            <TileO
              breakpoint="wide"
              tileName="support4"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`24. secondary one - wide 1`] = `
<div>
  <TileW
    breakpoint="wide"
    tileName="secondary"
  />
</div>
`;

exports[`25. secondary four - wide 1`] = `
<div>
  <div>
    <div>
      <div>
        <TileAR
          breakpoint="wide"
          tileName="secondary1"
        />
      </div>
      <div />
      <div>
        <TileAR
          breakpoint="wide"
          tileName="secondary2"
        />
      </div>
    </div>
    <div />
    <div>
      <TileB
        additionalHeadlineStyles={
          Object {
            "fontSize": 20,
            "lineHeight": 20,
            "marginBottom": "5px",
          }
        }
        breakpoint="wide"
        tileName="secondary3"
      />
      <div />
      <TileB
        additionalHeadlineStyles={
          Object {
            "fontSize": 20,
            "lineHeight": 20,
            "marginBottom": "5px",
          }
        }
        breakpoint="wide"
        tileName="secondary4"
      />
    </div>
  </div>
</div>
`;

exports[`26. secondary one and columnist - wide 1`] = `
<div>
  <div>
    <div>
      <TileAB
        breakpoint="wide"
        tileName="columnist"
      />
    </div>
    <div />
    <div>
      <TileB
        breakpoint="wide"
        tileName="secondary"
        withMoreTeaser={true}
      />
    </div>
  </div>
</div>
`;

exports[`27. secondary two and two - wide 1`] = `
<div>
  <div>
    <div>
      <TileAM
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileAN
        tileName="support1"
      />
    </div>
    <div />
    <div>
      <TileAM
        tileName="secondary2"
      />
    </div>
    <div />
    <div>
      <TileAN
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`28. lead one and four slice - wide 1`] = `
<div>
  <div>
    <div>
      <TileAC
        breakpoint="wide"
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileAD
        breakpoint="wide"
        tileName="support1"
      />
      <div />
      <TileAD
        breakpoint="wide"
        tileName="support2"
      />
      <div />
      <TileAD
        breakpoint="wide"
        tileName="support3"
      />
      <div />
      <TileAD
        breakpoint="wide"
        tileName="support4"
      />
    </div>
  </div>
</div>
`;

exports[`29. standard slice - wide 1`] = `
<div>
  <div>
    <div>
      <TileK
        breakpoint="wide"
        tileName="standardItem1"
      />
      <div />
      <TileK
        breakpoint="wide"
        tileName="standardItem2"
      />
      <div />
      <TileK
        breakpoint="wide"
        tileName="standardItem3"
      />
      <div />
      <TileK
        breakpoint="wide"
        tileName="standardItem4"
      />
      <div />
      <TileK
        breakpoint="wide"
        tileName="standardItem5"
      />
    </div>
  </div>
</div>
`;

exports[`30. secondary two no pic and two - wide 1`] = `
<div>
  <div>
    <div>
      <div>
        <TileAE
          breakpoint="wide"
          tileName="secondary1"
        />
      </div>
      <div />
      <div>
        <TileAE
          breakpoint="wide"
          tileName="secondary2"
        />
      </div>
    </div>
    <div />
    <div>
      <TileG
        breakpoint="wide"
        tileName="support1"
      />
      <div />
      <TileG
        breakpoint="wide"
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`31. list two and six no pic - wide 1`] = `
<div>
  <div>
    <div>
      <TileAS
        breakpoint="wide"
        tileName="lead1"
      />
    </div>
    <div />
    <div>
      <TileAS
        breakpoint="wide"
        tileName="lead2"
      />
    </div>
    <div />
    <div>
      <div>
        <div>
          <TileL
            breakpoint="wide"
            tileName="support1"
          />
        </div>
        <div />
        <div>
          <TileL
            breakpoint="wide"
            tileName="support2"
          />
        </div>
      </div>
      <div />
      <div>
        <div>
          <TileL
            breakpoint="wide"
            tileName="support3"
          />
        </div>
        <div />
        <div>
          <TileL
            breakpoint="wide"
            tileName="support4"
          />
        </div>
      </div>
      <div />
      <div>
        <div>
          <TileL
            breakpoint="wide"
            tileName="support5"
          />
        </div>
        <div />
        <div>
          <TileL
            breakpoint="wide"
            tileName="support6"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`32. puzzle - wide 1`] = `
<div>
  <div>
    <div>
      <TileAK
        breakpoint="wide"
        id="0"
        image={
          Object {
            "crop11": null,
            "crop169": null,
            "crop23": null,
            "crop32": Object {
              "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
            },
            "crop45": null,
            "crops": Array [],
            "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
          }
        }
        title="Times Concise medium No 7881"
        url="/crossword/123"
      />
    </div>
    <div>
      <TileAK
        breakpoint="wide"
        id="1"
        image={
          Object {
            "crop11": null,
            "crop169": null,
            "crop23": null,
            "crop32": Object {
              "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
            },
            "crop45": null,
            "crops": Array [],
            "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
          }
        }
        title="Times Concise medium No 7881"
        url="/crossword/123"
      />
    </div>
    <div>
      <TileAK
        breakpoint="wide"
        id="2"
        image={
          Object {
            "crop11": null,
            "crop169": null,
            "crop23": null,
            "crop32": Object {
              "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
            },
            "crop45": null,
            "crops": Array [],
            "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
          }
        }
        title="Times Concise medium No 7881"
        url="/crossword/123"
      />
    </div>
  </div>
</div>
`;

exports[`33. comment lead and cartoon - huge 1`] = `
<div>
  <div>
    <div>
      <TileAH
        breakpoint="wide"
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileAI
        breakpoint="wide"
        tileName="cartoon"
      />
    </div>
  </div>
</div>
`;

exports[`34. daily universal register - huge 1`] = `
<div>
  <div>
    <Image
      aspectRatio={1}
      uri="https://www.thetimes.co.uk/d/img/DUR-masthead-40fe00731f.png"
    />
    <div>
      Daily Universal Register
    </div>
    <div>
      <div>
        <TileS
          breakpoint="wide"
        />
        <div />
        <TileS
          breakpoint="wide"
          logo={
            <Logo
              imageUri="https://www.thetimes.co.uk/d/img/DUR-nature-80d36dd1cd.png"
              ratio={1}
              type="nature notes"
            />
          }
        />
      </div>
      <div />
      <div>
        <TileS
          breakpoint="wide"
        />
        <div />
        <TileS
          breakpoint="wide"
          logo={
            <Logo
              imageUri="https://www.thetimes.co.uk/d/img/DUR-birthdays-94b2272911.png"
              ratio={1}
              type="birthdays"
            />
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`35. lead one and one - huge 1`] = `
<div>
  <div>
    <div>
      <TileZ
        breakpoint="wide"
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileAF
        breakpoint="wide"
        tileName="support"
      />
    </div>
  </div>
</div>
`;

exports[`36. lead one full width - huge 1`] = `
<div>
  <TileR
    breakpoint="wide"
    tileName="lead"
  />
</div>
`;

exports[`37. lead two no pic and two - huge 1`] = `
<div>
  <div>
    <div>
      <TileX
        breakpoint="wide"
        tileName="lead1"
      />
      <div />
      <TileY
        breakpoint="wide"
        tileName="lead2"
      />
    </div>
    <div />
    <div>
      <TileE
        breakpoint="wide"
        tileName="support1"
      />
    </div>
    <div />
    <div>
      <TileAL
        breakpoint="wide"
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`38. leaders slice - huge 1`] = `
<div>
  <div>
    <div>
      <Image
        aspectRatio={5.74}
        uri="https://www.thetimes.co.uk/d/img/leaders-masthead-d17db00289.png"
      />
      <div>
        <div>
           Leading Articles 
        </div>
      </div>
    </div>
    <div>
      <div>
        <TileM
          breakpoint="wide"
          tileName="leader2"
        />
      </div>
      <div />
      <div>
        <TileM
          breakpoint="wide"
          tileName="leader1"
        />
      </div>
      <div />
      <div>
        <TileM
          breakpoint="wide"
          tileName="leader3"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`39. secondary one and four - huge 1`] = `
<div>
  <div>
    <div>
      <TheTimesLogo
        height={40}
        width={42}
      />
    </div>
    <div />
    <div>
      <div>
        <div>
          <TileN
            breakpoint="wide"
            tileName="secondary"
          />
        </div>
      </div>
      <div />
      <div>
        <div>
          <div>
            <TileO
              breakpoint="wide"
              tileName="support1"
            />
          </div>
          <div />
          <div>
            <TileO
              breakpoint="wide"
              tileName="support2"
            />
          </div>
        </div>
        <div />
        <div>
          <div>
            <TileO
              breakpoint="wide"
              tileName="support3"
            />
          </div>
          <div />
          <div>
            <TileO
              breakpoint="wide"
              tileName="support4"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`40. secondary one - huge 1`] = `
<div>
  <TileW
    breakpoint="wide"
    tileName="secondary"
  />
</div>
`;

exports[`41. secondary four - huge 1`] = `
<div>
  <div>
    <div>
      <div>
        <TileAR
          breakpoint="wide"
          tileName="secondary1"
        />
      </div>
      <div />
      <div>
        <TileAR
          breakpoint="wide"
          tileName="secondary2"
        />
      </div>
    </div>
    <div />
    <div>
      <TileB
        additionalHeadlineStyles={
          Object {
            "fontSize": 20,
            "lineHeight": 20,
            "marginBottom": "5px",
          }
        }
        breakpoint="wide"
        tileName="secondary3"
      />
      <div />
      <TileB
        additionalHeadlineStyles={
          Object {
            "fontSize": 20,
            "lineHeight": 20,
            "marginBottom": "5px",
          }
        }
        breakpoint="wide"
        tileName="secondary4"
      />
    </div>
  </div>
</div>
`;

exports[`42. secondary one and columnist - huge 1`] = `
<div>
  <div>
    <div>
      <TileAB
        breakpoint="wide"
        tileName="columnist"
      />
    </div>
    <div />
    <div>
      <TileB
        breakpoint="wide"
        tileName="secondary"
        withMoreTeaser={true}
      />
    </div>
  </div>
</div>
`;

exports[`43. secondary two and two - huge 1`] = `
<div>
  <div>
    <div>
      <TileAM
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileAN
        tileName="support1"
      />
    </div>
    <div />
    <div>
      <TileAM
        tileName="secondary2"
      />
    </div>
    <div />
    <div>
      <TileAN
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`44. lead one and four slice - huge 1`] = `
<div>
  <div>
    <div>
      <TileAC
        breakpoint="wide"
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileAD
        breakpoint="wide"
        tileName="support1"
      />
      <div />
      <TileAD
        breakpoint="wide"
        tileName="support2"
      />
      <div />
      <TileAD
        breakpoint="wide"
        tileName="support3"
      />
      <div />
      <TileAD
        breakpoint="wide"
        tileName="support4"
      />
    </div>
  </div>
</div>
`;

exports[`45. standard slice - huge 1`] = `
<div>
  <div>
    <div>
      <TileK
        breakpoint="wide"
        tileName="standardItem1"
      />
      <div />
      <TileK
        breakpoint="wide"
        tileName="standardItem2"
      />
      <div />
      <TileK
        breakpoint="wide"
        tileName="standardItem3"
      />
      <div />
      <TileK
        breakpoint="wide"
        tileName="standardItem4"
      />
      <div />
      <TileK
        breakpoint="wide"
        tileName="standardItem5"
      />
    </div>
  </div>
</div>
`;

exports[`46. secondary two no pic and two - huge 1`] = `
<div>
  <div>
    <div>
      <div>
        <TileAE
          breakpoint="wide"
          tileName="secondary1"
        />
      </div>
      <div />
      <div>
        <TileAE
          breakpoint="wide"
          tileName="secondary2"
        />
      </div>
    </div>
    <div />
    <div>
      <TileG
        breakpoint="wide"
        tileName="support1"
      />
      <div />
      <TileG
        breakpoint="wide"
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`47. list two and six no pic - huge 1`] = `
<div>
  <div>
    <div>
      <TileAS
        breakpoint="wide"
        tileName="lead1"
      />
    </div>
    <div />
    <div>
      <TileAS
        breakpoint="wide"
        tileName="lead2"
      />
    </div>
    <div />
    <div>
      <div>
        <div>
          <TileL
            breakpoint="wide"
            tileName="support1"
          />
        </div>
        <div />
        <div>
          <TileL
            breakpoint="wide"
            tileName="support2"
          />
        </div>
      </div>
      <div />
      <div>
        <div>
          <TileL
            breakpoint="wide"
            tileName="support3"
          />
        </div>
        <div />
        <div>
          <TileL
            breakpoint="wide"
            tileName="support4"
          />
        </div>
      </div>
      <div />
      <div>
        <div>
          <TileL
            breakpoint="wide"
            tileName="support5"
          />
        </div>
        <div />
        <div>
          <TileL
            breakpoint="wide"
            tileName="support6"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`48. puzzle - huge 1`] = `
<div>
  <div>
    <div>
      <TileAK
        breakpoint="wide"
        id="0"
        image={
          Object {
            "crop11": null,
            "crop169": null,
            "crop23": null,
            "crop32": Object {
              "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
            },
            "crop45": null,
            "crops": Array [],
            "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
          }
        }
        title="Times Concise medium No 7881"
        url="/crossword/123"
      />
    </div>
    <div>
      <TileAK
        breakpoint="wide"
        id="1"
        image={
          Object {
            "crop11": null,
            "crop169": null,
            "crop23": null,
            "crop32": Object {
              "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
            },
            "crop45": null,
            "crops": Array [],
            "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
          }
        }
        title="Times Concise medium No 7881"
        url="/crossword/123"
      />
    </div>
    <div>
      <TileAK
        breakpoint="wide"
        id="2"
        image={
          Object {
            "crop11": null,
            "crop169": null,
            "crop23": null,
            "crop32": Object {
              "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
            },
            "crop45": null,
            "crops": Array [],
            "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
          }
        }
        title="Times Concise medium No 7881"
        url="/crossword/123"
      />
    </div>
  </div>
</div>
`;
